ja/12.1/admin/scheduler-guide.rst
============
スケジューラ
============

概要
====

ここでは、ジョブスケジューラに関する設定について説明します。

管理方法
========

表示方法
--------

下図のジョブスケジューラの設定一覧ページを開くには、左メニューの [システム > スケジューラ] をクリックします。

|image0|

編集するには設定名をクリックします。

設定の作成
----------

スケジューラの設定ページを開くには新規作成ボタンをクリックします。

|image1|

設定項目
--------

名前
::::

一覧で表示される名前です。

対象
::::

対象はジョブをバッチ等で直接コマンド実行するときに実行するかどうかの識別子として利用することができます。
クロールをコマンド実行などしない場合は、「all」を指定してください。

スケジュール
::::::::::::

スケジュールの設定を行います。
ここで設定したスケジュールでスクリプトで記述したジョブが実行されます。

記述形式はCRON形式で「分 時 日 月 曜日」の形式で記述します。
たとえば、「0 12 \* \* 3」の場合は、毎週水曜日の12.10pmにジョブを実行します。

実行方法
::::::::

スクリプトの実行環境を指定します。
現時点では「groovy」だけをサポートしています。

スクリプト
::::::::::

ジョブの実行内容を実行方法で指定した言語で記述します。

たとえば、3つのクロール設定のみをクロールジョブとして実行させたい場合は、以下のように記述します(前提としてウェブクロール設定のIDを1と2としファイルシステムクロール設定のIDを1とします)。

::

    return container.getComponent("crawlJob").logLevel("info").webConfigIds(["1", "2"] as String[]).fileConfigIds(["1"] as String[]).dataConfigIds([] as String[]).execute(executor);

ロギング
::::::::

有効にすることでジョブログへ記録されます。

クローラージョブ
::::::::::::::::

有効にすることでクローラージョブとして扱われます。

状態
::::

ジョブの有効・無効の状態を指定します。
無効にした場合はジョブは実行されません。

表示順序
::::::::

ジョブ一覧での表示順を指定します。

設定の削除
----------

一覧ページの設定名をクリックし、削除ボタンをクリックすると確認画面が表示されます。
削除ボタンを押すと設定が削除されます。

.. |image0| image:: ../../../resources/images/ja/12.1/admin/scheduler-1.png
.. |image1| image:: ../../../resources/images/ja/12.1/admin/scheduler-2.png
